# dfmp

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
additional/: fill500.py
app/: Dockerfile  app.py
