[tool.poetry]
name = "flasktest"
version = "0.1.0"
description = "Test a simple Flask app with a MDB backend"
authors = ["Robert Alexander <gogonegro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.10.0"
Flask = "^2.3.3"
pymongo = "^4.5.0"
requests = "^2.31.0"
jsonify = "^0.5"
flasgger = "^0.9.7.1"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
faker = "^19.6.0" # this is used only on the host by the fill500.py program

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
